# OctoPlayer8

./: .gitignore  CMakeLists.txt  OctoPlayer8.jucer  README.md
OctoPlayer8/: OctoPlayer8.jucer
OctoPlayer8/Builds/Android/: local.properties  settings.gradle
OctoPlayer8/Builds/Android/app/: CMakeLists.txt  build.gradle
OctoPlayer8/Builds/Android/app/src/debug/res/values/: string.xml
OctoPlayer8/Builds/Android/app/src/main/: AndroidManifest.xml
OctoPlayer8/Builds/CLion/: CMakeLists.txt  Debug-Info-App.plist
OctoPlayer8/Builds/MacOSX/: Info-App.plist
OctoPlayer8/Builds/MacOSX/OctoPlayer8.xcodeproj/: project.pbxproj
OctoPlayer8/Builds/VisualStudio2019/: OctoPlayer8.sln  OctoPlayer8_App.vcxproj  OctoPlayer8_App.vcxproj.filters  resources.rc
OctoPlayer8/Builds/iOS/: Info-App.plist
OctoPlayer8/Builds/iOS/OctoPlayer8.xcodeproj/: project.pbxproj
OctoPlayer8/JuceLibraryCode/: JuceHeader.h
Source/: Main.cpp  MainComponent.cpp
